metadata/force-app/main/default/objects/CustomName_zRuyv__c/CustomName_zRuyv__c.object-meta.xml
<CustomObject>
    <description>Description_dnqDM</description>
    <label>CustomLabel_Jwkpa</label>
    <nameField>
        <label>CustomLabel_Jwkpa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_Jwkpas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>