metadata/force-app/main/default/objects/CustomName_zRuyv__c/fields/CustomField_ntxBH__c.field-meta.xml
<CustomField>
    <fullName>CustomField_ntxBH__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldAbFkp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>