metadata/force-app/main/default/objects/CustomName_zRuyv__c/fields/CustomField_Piqlk__c.field-meta.xml
<CustomField>
    <fullName>CustomField_Piqlk__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldVlLRA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>